--- a/index.html
+++ b/index.html
@@ -18,7 +18,57 @@
     <header>
         <!-- place navbar here -->
     </header>
-    <main></main>
+    <main>
+        <div class="contanier">
+            <!--INstructions-->
+            <div class="text-center mb-4">
+                <h1> Fantasy Name Generator </h1>
+                <p> Fill out the form below to generate for fantasy team name. </p>
+            </div>
+            <!--Form Section-->
+            <form id="fantasyForm" class="mb-4">
+                <!--Get first Name-->
+                <div class="mb-3">
+                    <label for="firstName" class="form-label"> First Name </label>
+                    <input type="text" class="form-control" .id="firstName" placeholder="Enter Your First Name.">
+                </div>
+                <!--Get Last Name-->
+                <div class="mb-3">
+                    <label for="lastName" class="form-label"> First Name </label>
+                    <input type="text" class="form-control" .id="lastName" placeholder="Enter Your Last Name.">
+                </div>
+                <!--Get Favorite Color-->
+                <div class="mb-3">
+                    <label for="favoriteColor" class="form-label"> favorite Color </label>
+                    <input type="text" class="form-control" .id="favoriteColor"
+                        placeholder="Enter Your Favorite Color.">
+                </div>
+                <!--GEt Favorite Animal-->
+                <div class="mb-3">
+                    <label for="favroiteAnimal" class="form-label"> Favorite Animal </label>
+                    <input type="text" class="form-control" .id="favroiteAnimal"
+                        placeholder="Enter Your Favorite Animal.">
+                </div>
+                <!--Get Row Type-->
+                <label for="rowType" class="form-label"> Choose Road Type </label>
+                <select id="rowType" class="form-select">
+                    <option value="road">Road</option>
+                    <option value="street">Street</option>
+                    <option value="drive">Drive</option>
+                    <option value="avenue">Avenue</option>
+                    <option value="Other">Other</option>
+                </select>
+        </div>
+        <!--Submit Button-->
+        <button type="submit" class="btn btn-light w-100"> Generator Name</button>
+        <!--Generator Name OutPut-->
+        <div class="result" id="result" </form>
+
+
+
+        </div>
+
+    </main>
     <footer>
         <!-- place footer here -->
     </footer>
