--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="https://use.typekit.net/gnr1ljz.css">
+
+
 </head>
 
 <body>
