--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </select>
         </div>
         <!--Submit Button-->
-        <button type="submit" class="btn btn-light w-100"> Generator Name</button>
+        <button type="submit" class="btn btn-light w-100" onclick="genFullName()"> Generator Name</button>
         <!--Generator Name OutPut-->
         <div class="result" id="result" </form>
 
