--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <!-- Get Last Name-->
                 <div class="mb-3">
-                    <label for="firstName" class="form-label">First Name</label>
+                    <label for="lastName" class="form-label">Last Name</label>
                     <input type="text" class="form-control" id="lastName" placeholder="Enter your first name" required>
                 </div>
                 <!-- Get FavColor-->
